tests/snapshots/yaml_suite_snapshots__yaml_suite_DWX9_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "\"\\n\\nliteral\\n \\n\\ntext\\n\"\n"
  emit: "|\n\n\n  literal\n␣␣␣\n\n  text\n"
  from: "http://www.yaml.org/spec/1.2/spec.html#id2796118"
  json: "\"\\n\\nliteral\\n \\n\\ntext\\n\"\n"
  name: Spec Example 8.8. Literal Content
  tags: spec literal scalar comment whitespace 1.3-err
  tree: "+STR\n +DOC\n  =VAL |\\n\\nliteral\\n \\n\\ntext\\n\n -DOC\n-STR\n"
  yaml: "|\n␣\n␣␣\n  literal\n␣␣␣\n␣␣\n  text\n\n # Comment\n"
