tests/snapshots/yaml_suite_snapshots__yaml_suite_E76Z_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "&a a: &b b\n*b : *a\n"
  from: NimYAML tests
  json: "{\n  \"a\": \"b\",\n  \"b\": \"a\"\n}\n"
  name: Aliases in Implicit Block Mapping
  tags: mapping alias
  tree: "+STR\n +DOC\n  +MAP\n   =VAL &a :a\n   =VAL &b :b\n   =ALI *b\n   =ALI *a\n  -MAP\n -DOC\n-STR\n"
  yaml: "&a a: &b b\n*b : *a\n"
