tests/snapshots/yaml_suite_snapshots__yaml_suite_EB22_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Missing document-end marker before directive
  from: "@perlpunk"
  tags: error directive footer
  fail: true
  yaml: "---\nscalar1 # comment\n%YAML 1.2\n---\nscalar2\n"
  tree: "+STR\n +DOC ---\n  =VAL :scalar1\n -DOC\n"
